syntax = "proto3";

package qiuwanli;

////////////////////////////////////////////////////////////
//服务端
message File2Cilent
{
	string FileName=1;	//文件名
	string FileSHA512=2;	//唯一标识SHA512
	string CilentID=3;	//客户端ID
}
message File2ClientTable
{
	repeated File2Cilent FileToClient=1;
}

//文件存储端的信息
message ClientConfigFile
{
	string CilentID=1;		//
	string SaveIP=2;		//客户端对应IP
	string PriKey=3;		//认证信息
	string KeyMD5=4;		//用于验证
	uint64 TotleSize=5;
	uint64 RemainSize=6;
}
message ClientConfigFileTable
{
	repeated ClientConfigFile ClientInfo=1;
}

//用于心跳连接
message Heart
{
	string ID=1;
	string RemainSize=2;
}
message HeartTable
{
	repeated Heart CilentHeart=1;
}

//服务端文件信息保存列表
message FileInfoList
{
	string FileSHA512=1;
	string FileMD5=2;
	string FileName=3;
	string FileCreateDate=4;
	string FileChangeDate=5;
	uint64 FileAllBlock=6;
	uint64 FileTotalSize=7;
	string Tag=8;
}
message FileInfoListTable
{
	repeated FileInfoList FileList=1;
}

//服务端文件块的对应存储列表
message BlockList4Down
{
	string FileSHA512=1;
	string BlockNumer=2;
	string SaveServersIP=3;
}
message BlockList4DownTable
{
	repeated BlockList4Down BlockListForDown=1;
}

//用于解析目录服务器收到的目录信息
message BlockInfo2Server
{
	string FileSHA512=1;
	repeated uint32 BlockNumer=2;
}
message BlockInfo2ServerTable
{
	string ClientIP=1;
	repeated BlockInfo2Server BlockInfo=2;
}


//用于保存用户信息
message UserInfo
{
	string UserID=1;
	string UserPS=2;
	repeated string FileSHA512=3;
}
message UserInfoTable
{
	repeated UserInfo User=1;
}

//分享列表
message Shared
{
	string SharedUrl=1;
	string FileSHA512=2;
	string VerificationCode=3;
	string UserID=4;
}
message SharedTable
{
	repeated Shared SharedInfo=1;
}

//用于记录用户操作的，可进行操作回退，系统日志
message Logs 
{
	string user_id=1;
	uint64 log_date=2;
	string log_info=3;
	bytes  log_type=4;
	string user_client_UUID=5;	
}
//用于记录个人日志，每月保存为一个文件
message LogTable
{
	string logdate=1;
	repeated Logs log=2;
}


//保存文件传输完成的验证信息
message FileList4Down
{
	string FileSHA512=1;
	string FileMD5=2;
}
message FileList4DownTable
{
	repeated FileList4Down FileListForDown=1;
}

//保存文件所对应的文件块的下载列表
message BlockListForDown
{
	string FileSHA512=1;
	string BlockNumer=2;
	string SaveServersIP=3;
}
message BlockListForDownTable
{
	repeated BlockListForDown BlockListForDown=1;
}
